[gd_scene load_steps=3 format=3 uid="uid://cowdkvk8ql080"]

[ext_resource type="Script" path="res://main.gd" id="1_ht6oi"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_t4xo1"]

[node name="Main" type="Node2D"]
script = ExtResource("1_ht6oi")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Play" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 552.0
offset_top = 288.0
offset_right = 596.0
offset_bottom = 319.0
tooltip_text = "Start the game."
text = "Play"
icon = SubResource("PlaceholderTexture2D_t4xo1")

[node name="Quit" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 552.0
offset_top = 352.0
offset_right = 601.0
offset_bottom = 383.0
tooltip_text = "Quit the game."
text = "Quit"
icon = SubResource("PlaceholderTexture2D_t4xo1")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Main2D" type="Node2D" parent="."]

[node name="Camera" type="Camera2D" parent="Main2D"]
position = Vector2(576, 328)

[connection signal="pressed" from="Menu/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Menu/Quit" to="." method="_on_quit_pressed"]
